--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="missions"></div>
     </div>
     <footer>
-        <p>Created by <strong><a href="https://t.me/jodohsaya">BB22</a></strong></p>
+        <p align="center">Created by <strong><a href="https://t.me/jodohsaya">BB22</a></strong></p>
     </footer>
     <script src="script.js"></script>
 </body>
